added a GlowingTotem